--- a/src/app/component/center-details/center-details.component.css
+++ b/src/app/component/center-details/center-details.component.css
@@ -1,32 +1,51 @@
-/*!* Add a class for the fading effect *!*/
-/*.fade-bottom {*/
-/*  position: relative;*/
-/*}*/
-
-/*.fade-bottom::after {*/
-/*  content: "";*/
-/*  position: absolute;*/
-/*  bottom: 0;*/
-/*  left: 0;*/
-/*  right: 0;*/
-/*  height: 125px; !* Adjust the height of the fading effect as needed *!*/
-/*  background: linear-gradient(transparent, white); !* Use linear gradient for fading effect *!*/
-/*}*/
-
-/*!* Style the "View More" tab *!*/
-/*.view-more-tab {*/
-/*  position: absolute;*/
-/*  bottom: 10px;*/
-/*  right: 10px;*/
-/*  cursor: pointer;*/
-/*  color: #007bff; !* Adjust the color as needed *!*/
-/*}*/
-
-/*.view-more-tab:hover {*/
-/*  text-decoration: underline;*/
-/*}*/
-
 .accepted-materials {
   display: flex;
   gap: 5px; /* Adjust the spacing between badges as needed */
+}
+
+.statsModalContent {
+  font-size: 16px;
+  max-width: 500px;
+  margin: auto;
+  padding: 20px;
+}
+
+.statsModalContent h2 {
+  font-size: 24px;
+  color: #333;
+}
+
+.statsTable {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.statsTable th, .statsTable td {
+  padding: 12px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.statsTable th {
+  background-color: #f2f2f2;
+}
+
+.statsTable tr:hover {
+  background-color: #f5f5f5;
+}
+
+.modal-badge {
+  display: inline-block;
+  padding: 6px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  /*text-transform: uppercase;*/
+  border-radius: 8px;
+  margin-right: 5px;
+}
+
+.statsModalContent .badge + .badge {
+  margin-left: 10px !important;
 }
