--- a/src/app/component/center-all/center-all.component.html
+++ b/src/app/component/center-all/center-all.component.html
@@ -115,7 +115,7 @@
                     <select formControlName="sortBy" class="form-control">
                       <option value="createdAt">Created At</option>
                       <option value="name">Center Name</option>
-                      <option value="contact">Contact</option>
+                      <option value="contact">Contact Info</option>
                       <option value="county">County</option>
                       <option value="city">City</option>
                       <option value="acceptedMaterials">Accepted Materials</option>
