--- a/src/app/component/center-details/center-details.component.html
+++ b/src/app/component/center-details/center-details.component.html
@@ -309,7 +309,7 @@
               <span class="modal-badge badge-soft-recyclers">Active Recyclers</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <span class="me-2 h3"><i class="fa-solid fa-recycle me-2"></i>  {{ state?.appData?.data?.centerStats?.activitiesNumber </span>
+              <span class="me-2 h3"><i class="fa-solid fa-recycle me-2"></i>  {{ state?.appData?.data?.centerStats?.activitiesNumber }} </span>
               <span class="modal-badge badge-soft-activities">Recycling Activities</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
