--- a/src/app/component/vouchers/vouchers.component.html
+++ b/src/app/component/vouchers/vouchers.component.html
@@ -14,53 +14,161 @@
           <div class="col">
             <h4 class="fw-bold text-start">Earned Vouchers</h4>
           </div>
-          <div class="col-xm-12">
-            <table class="table table-hover">
-              <thead>
-              <tr>
-                <th scope="col">Voucher Code</th>
-                <th scope="col">Type</th>
-                <th scope="col">Threshold</th>
-                <th scope="col"> Status</th>
-                <th scope="col">Earned On</th>
-                <th scope="col">Expires At</th>
-                <th scope="col">Action</th>
-              </tr>
-              </thead>
-              <tbody class="table-body">
-              <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
-                <td>{{ voucher.uniqueCode }}</td>
-                <td>{{ voucher.voucherType?.name }}</td>
-                <td>{{ voucher.voucherType?.thresholdPoints }}</td>
-                <td> STATUS HERE</td>
-                <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
-                <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
-                <td>
-                  <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
-                </td>
-              </tr>
-              </tbody>
-            </table>
 
-            <!-- Pagination -->
-            <nav *ngIf="state?.appData?.data?.page.totalPages > 0" class="pagination-container">
-              <ngb-pagination
-                [(page)]="currentPage"
-                [collectionSize]="state?.appData?.data?.page.totalElements"
-                [maxSize]="3"
-                [rotate]="true"
-                [boundaryLinks]="false"
-                [ellipses]="true"
-                (pageChange)="goToPage($event)"
-                class="pagination justify-content-end"
-              >
-                <ng-template ngbPaginationPrevious><i class="fa-solid fa-angle-left"></i> Prev</ng-template>
-                <ng-template ngbPaginationNext>Next <i class="fa-solid fa-angle-right"></i></ng-template>
-              </ngb-pagination>
-            </nav>
+          <div *ngIf="false" [formGroup]="searchForm" (ngSubmit)="searchVouchers()" class="invisible-form">
+            <select formControlName="sortBy" class="form-control">
+              <option value="createdAt">Created At</option>
+              <option value="createdAt">Expires At</option>
+              <option value="code">Voucher Code</option>
+              <option value="type">Voucher Type</option>
+            </select>
+
+            <select formControlName="sortOrder" class="form-control">
+              <option value="asc">Ascending</option>
+              <option value="desc">Descending</option>
+            </select>
+
+            <input formControlName="redeemed" class="form-control" type="checkbox">
+            <input formControlName="expired" class="form-control" type="checkbox">
 
           </div>
+
+
+          <nav ngbNav #nav="ngbNav" class="nav-pills  mt-3 mb-3 me-1" orientation="horizontal">
+
+            <ng-container ngbNavItem>
+              <button ngbNavLink mat-button class="nav-cell" (click)="updateActiveTab('Available')"> Available</button>
+              <ng-template ngbNavContent>
+                <div class="col-xm-12">
+                  <table class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th scope="col">Voucher Code</th>
+                      <th scope="col">Type</th>
+                      <th scope="col">Threshold</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">Earned On</th>
+                      <th scope="col">Expires At</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
+                      <td>{{ voucher.uniqueCode }}</td>
+                      <td>{{ voucher.voucherType?.name }}</td>
+                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
+                      <td> STATUS HERE</td>
+                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
+                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
+                      <td>
+                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+
+
+
+                </div>
+              </ng-template>
+            </ng-container>
+
+            <ng-container ngbNavItem>
+              <a ngbNavLink mat-button class="nav-cell" (click)="updateActiveTab('Redeemed')"> Redeemed</a>
+              <ng-template ngbNavContent>
+                <div class="col-xm-12">
+                  <table class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th scope="col">Voucher Code</th>
+                      <th scope="col">Type</th>
+                      <th scope="col">Threshold</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">Earned On</th>
+                      <th scope="col">Expires At</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
+                      <td>{{ voucher.uniqueCode }}</td>
+                      <td>{{ voucher.voucherType?.name }}</td>
+                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
+                      <td> STATUS HERE</td>
+                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
+                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
+                      <td>
+                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+
+
+
+                </div>
+              </ng-template>
+            </ng-container>
+            <ng-container ngbNavItem>
+              <a ngbNavLink class="nav-cell" (click)="updateActiveTab('Expired')"> Expired</a>
+              <ng-template ngbNavContent>
+                <div class="col-xm-12">
+                  <table class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th scope="col">Voucher Code</th>
+                      <th scope="col">Type</th>
+                      <th scope="col">Threshold</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">Earned On</th>
+                      <th scope="col">Expires At</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
+                      <td>{{ voucher.uniqueCode }}</td>
+                      <td>{{ voucher.voucherType?.name }}</td>
+                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
+                      <td> STATUS HERE</td>
+                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
+                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
+                      <td>
+                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+
+
+
+                </div>
+              </ng-template>
+            </ng-container>
+          </nav>
+
+          <div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+          <!-- Pagination -->
+          <nav *ngIf="state?.appData?.data?.page.totalPages > 0" class="pagination-container">
+            <ngb-pagination
+              [(page)]="currentPage"
+              [collectionSize]="state?.appData?.data?.page.totalElements"
+              [maxSize]="3"
+              [rotate]="true"
+              [boundaryLinks]="false"
+              [ellipses]="true"
+              (pageChange)="goToPage($event)"
+              class="pagination justify-content-end"
+            >
+              <ng-template ngbPaginationPrevious><i class="fa-solid fa-angle-left"></i> Prev</ng-template>
+              <ng-template ngbPaginationNext>Next <i class="fa-solid fa-angle-right"></i></ng-template>
+            </ngb-pagination>
+          </nav>
+
         </div>
+
+
       </div>
     </section>
   </ng-container>
