--- a/src/app/component/vouchers/vouchers.component.html
+++ b/src/app/component/vouchers/vouchers.component.html
@@ -1,175 +1,104 @@
-<ng-container *ngIf="(vouchersState$ | async) as state" [ngSwitch]="state.dataState">
+<ng-container *ngIf="(vouchersState$ | async) as state" [ngSwitch]="state.dataState"
+              xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
   <ng-container *ngSwitchCase="DataState.LOADED">
     <app-navbar [user]="state?.appData?.data?.user"></app-navbar>
     <div style="margin-top: 90px"></div>
-    <section>
-      <div class="container">
-        <nav aria-label="breadcrumb" style="margin-top: 8px;">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"> <a [routerLink]="['/']">Home</a> </li>
-            <li class="breadcrumb-item active"> Vouchers </li>
-          </ol>
-        </nav>
-        <div class="row mt-3">
-          <div class="col">
-            <h4 class="fw-bold text-start">Earned Vouchers</h4>
+    <section class="container mt-4">
+      <nav aria-label="breadcrumb" style="margin-top: 8px;">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"> <a [routerLink]="['/']">Home</a> </li>
+          <li class="breadcrumb-item active"> Vouchers </li>
+        </ol>
+      </nav>
+      <div class="row">
+        <div class="col">
+          <h4 class="fw-bold text-start">Earned Vouchers</h4>
+        </div>
+
+        <!-- Search Form -->
+        <form [formGroup]="searchForm" (ngSubmit)="searchVouchers()" class="d-flex justify-content-end">
+          <div class="d-flex align-items-center">
+            <label class="visually-hidden">Voucher Code</label>
+            <input type="text" formControlName="code" class="form-control" placeholder="Voucher Code" />
           </div>
 
-          <div *ngIf="false" [formGroup]="searchForm" (ngSubmit)="searchVouchers()" class="invisible-form">
-            <select formControlName="sortBy" class="form-control">
+          <select formControlName="sortBy" class="invisible-form">
               <option value="createdAt">Created At</option>
               <option value="createdAt">Expires At</option>
               <option value="code">Voucher Code</option>
               <option value="type">Voucher Type</option>
-            </select>
+          </select>
 
-            <select formControlName="sortOrder" class="form-control">
+          <select formControlName="sortOrder" class="invisible-form">
               <option value="asc">Ascending</option>
               <option value="desc">Descending</option>
-            </select>
+          </select>
 
-            <input formControlName="redeemed" class="form-control" type="checkbox">
-            <input formControlName="expired" class="form-control" type="checkbox">
+          <input formControlName="redeemed" class="invisible-form" type="checkbox">
+          <input formControlName="expired" class="invisible-form" type="checkbox">
 
-          </div>
-
-
-          <nav ngbNav #nav="ngbNav" class="nav-pills  mt-3 mb-3 me-1" orientation="horizontal">
-
-            <ng-container ngbNavItem>
-              <button ngbNavLink mat-button class="nav-cell" (click)="updateActiveTab('Available')"> Available</button>
-              <ng-template ngbNavContent>
-                <div class="col-xm-12">
-                  <table class="table table-hover">
-                    <thead>
-                    <tr>
-                      <th scope="col">Voucher Code</th>
-                      <th scope="col">Type</th>
-                      <th scope="col">Threshold</th>
-                      <th scope="col">Status</th>
-                      <th scope="col">Earned On</th>
-                      <th scope="col">Expires At</th>
-                      <th scope="col">Action</th>
-                    </tr>
-                    </thead>
-                    <tbody class="table-body">
-                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
-                      <td>{{ voucher.uniqueCode }}</td>
-                      <td>{{ voucher.voucherType?.name }}</td>
-                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
-                      <td> STATUS HERE</td>
-                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
-                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
-                      <td>
-                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
-
-
-
-                </div>
-              </ng-template>
-            </ng-container>
-
-            <ng-container ngbNavItem>
-              <a ngbNavLink mat-button class="nav-cell" (click)="updateActiveTab('Redeemed')"> Redeemed</a>
-              <ng-template ngbNavContent>
-                <div class="col-xm-12">
-                  <table class="table table-hover">
-                    <thead>
-                    <tr>
-                      <th scope="col">Voucher Code</th>
-                      <th scope="col">Type</th>
-                      <th scope="col">Threshold</th>
-                      <th scope="col">Status</th>
-                      <th scope="col">Earned On</th>
-                      <th scope="col">Expires At</th>
-                      <th scope="col">Action</th>
-                    </tr>
-                    </thead>
-                    <tbody class="table-body">
-                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
-                      <td>{{ voucher.uniqueCode }}</td>
-                      <td>{{ voucher.voucherType?.name }}</td>
-                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
-                      <td> STATUS HERE</td>
-                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
-                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
-                      <td>
-                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
-
-
-
-                </div>
-              </ng-template>
-            </ng-container>
-            <ng-container ngbNavItem>
-              <a ngbNavLink class="nav-cell" (click)="updateActiveTab('Expired')"> Expired</a>
-              <ng-template ngbNavContent>
-                <div class="col-xm-12">
-                  <table class="table table-hover">
-                    <thead>
-                    <tr>
-                      <th scope="col">Voucher Code</th>
-                      <th scope="col">Type</th>
-                      <th scope="col">Threshold</th>
-                      <th scope="col">Status</th>
-                      <th scope="col">Earned On</th>
-                      <th scope="col">Expires At</th>
-                      <th scope="col">Action</th>
-                    </tr>
-                    </thead>
-                    <tbody class="table-body">
-                    <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
-                      <td>{{ voucher.uniqueCode }}</td>
-                      <td>{{ voucher.voucherType?.name }}</td>
-                      <td>{{ voucher.voucherType?.thresholdPoints }}</td>
-                      <td> STATUS HERE</td>
-                      <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
-                      <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
-                      <td>
-                        <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
-
-
-
-                </div>
-              </ng-template>
-            </ng-container>
-          </nav>
-
-          <div [ngbNavOutlet]="nav" class="mt-2"></div>
-
-          <!-- Pagination -->
-          <nav *ngIf="state?.appData?.data?.page.totalPages > 0" class="pagination-container">
-            <ngb-pagination
-              [(page)]="currentPage"
-              [collectionSize]="state?.appData?.data?.page.totalElements"
-              [maxSize]="3"
-              [rotate]="true"
-              [boundaryLinks]="false"
-              [ellipses]="true"
-              (pageChange)="goToPage($event)"
-              class="pagination justify-content-end"
-            >
-              <ng-template ngbPaginationPrevious><i class="fa-solid fa-angle-left"></i> Prev</ng-template>
-              <ng-template ngbPaginationNext>Next <i class="fa-solid fa-angle-right"></i></ng-template>
-            </ngb-pagination>
-          </nav>
-
-        </div>
-
-
+          </form>
       </div>
+
+
+
+
+      <nav ngbNav #nav="ngbNav" class="nav-pills mt-3 mb-3">
+        <ng-container ngbNavItem *ngFor="let tab of ['Available', 'Redeemed', 'Expired']">
+          <button ngbNavLink mat-button class="nav-cell" (click)="updateActiveTab(tab)">{{ tab }}</button>
+          <ng-template ngbNavContent>
+            <div class="col-xm-12">
+
+              <!-- Table for each tab -->
+              <table class="table table-hover">
+                <thead>
+                <tr>
+                  <th scope="col">Voucher Code</th>
+                  <th scope="col">Type</th>
+                  <th scope="col">Threshold</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Earned On</th>
+                  <th scope="col">Expires At</th>
+                  <th scope="col">Action</th>
+                </tr>
+                </thead>
+                <tbody class="table-body">
+                <tr *ngFor="let voucher of state?.appData?.data?.page?.content" class="cell-1">
+                  <td>{{ voucher.uniqueCode }}</td>
+                  <td>{{ voucher.voucherType?.name }}</td>
+                  <td>{{ voucher.voucherType?.thresholdPoints }}</td>
+                  <td> STATUS HERE</td>
+                  <td>{{ voucher.createdAt | date: 'mediumDate' }}</td>
+                  <td>{{ voucher.expiresAt | date: 'mediumDate' }}</td>
+                  <td>
+                    <button [routerLink]="['/vouchers', voucher.uniqueCode]" type="button" class="btn btn-info btn-sm">View</button>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </ng-template>
+        </ng-container>
+      </nav>
+
+      <div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+      <!-- Pagination -->
+      <nav *ngIf="state?.appData?.data?.page.totalPages > 0" class="pagination-container">
+        <ngb-pagination
+          [(page)]="currentPage"
+          [collectionSize]="state?.appData?.data?.page.totalElements"
+          [maxSize]="3"
+          [rotate]="true"
+          [boundaryLinks]="false"
+          [ellipses]="true"
+          (pageChange)="goToPage($event)"
+          class="pagination justify-content-end"
+        >
+          <ng-template ngbPaginationPrevious><i class="fa-solid fa-angle-left"></i> Prev</ng-template>
+          <ng-template ngbPaginationNext>Next <i class="fa-solid fa-angle-right"></i></ng-template>
+        </ngb-pagination>
+      </nav>
     </section>
   </ng-container>
 </ng-container>
